--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -4,21 +4,14 @@
 <div class="login-page">
   <div class="form">
     {% if form.errors %}
-    <p class="error-message">Your username and password didn't match. Please try again.</p>
+    <p class="errorlist">Your username and password didn't match. Please try again.</p>
     {% endif %}
-    <form class="register-form">
-      <input type="text" placeholder="name" />
-      <input type="password" placeholder="password" />
-      <input type="text" placeholder="email address" />
-      <button>create</button>
-      <p class="message">Already registered? <a href="{% url 'login' %}">Sign In</a></p>
-    </form>
     <form class="login-form" method="post" action="{% url 'login' %}">
       {% csrf_token %}
       <input type="text" placeholder="username" name="username" />
       <input type="password" placeholder="password" name="password" />
       <button>login</button>
-      <p class="message">Not registered? <a href="{% url 'register' %}">Create an account</a></p>
     </form>
+    <p class="message">Not registered? <a href="{% url 'register' %}">Create an account</a></p>
   </div>
 </div>
