--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,17 +1,19 @@
-<head>
-  <link rel="stylesheet" href="/static/registration/styles.css">
-</head>
-<div class="login-page">
-  <div class="form">
-    {% if form.errors %}
-    <p class="errorlist">Your username and password didn't match. Please try again.</p>
-    {% endif %}
-    <form class="login-form" method="post" action="{% url 'login' %}">
-      {% csrf_token %}
-      <input type="text" placeholder="username" name="username" />
-      <input type="password" placeholder="password" name="password" />
-      <button>login</button>
-    </form>
-    <p class="message">Not registered? <a href="{% url 'register' %}">Create an account</a></p>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+  <div class="card">
+    <div class="form">
+      {% if form.errors %}
+        <p class="errorlist">Your username and password didn't match. Please try again.</p>
+      {% endif %}
+      <form class="login-form" method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <input type="text" placeholder="username" name="username" />
+        <input type="password" placeholder="password" name="password" />
+        <button>login</button>
+      </form>
+      <p class="message">Not registered? <a href="{% url 'register' %}">Create an account</a></p>
+    </div>
   </div>
-</div>
+{% endblock %}
