Closes #21: added list of leagues and league registration

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -4,10 +4,10 @@
   <section id="profile">
     <div class="card flex-center flex-column">
       <img class="profile-avatar" src="{{ user.avatar }}">
-      <div class="profile-name">{{ user.first_name }} {{ user.last_name }}</div>
-      <div class="profile-username">{{ user.username }}</div>
+      <div class="card-title">{{ user.first_name }} {{ user.last_name }}</div>
+      <div class="card-description">{{ user.username }}</div>
 
-      <a class="button btn-danger" href="{% url 'logout' %}">Logout</a>
+      <a class="button btn-danger" href="{% url 'accounts:logout' %}">Logout</a>
     </div>
   </section>
 {% endblock %}
