--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -5,7 +5,7 @@
     <div class="flex-center flex-column">
       <h1>Welcome to the Battlefield</h1>
       <p>Here we create, fight, learn and have fun. join us!</p>
-      <a class="button" href="{% url 'about' %}">Learn More</a>
+      <a class="button" href="{% url 'home:about' %}">Learn More</a>
     </div>
   </section>
 {% endblock %}
