--- a/league/templates/register.html
+++ b/league/templates/register.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="card">
+  <div class="card flex-center flex-column">
+    <div class="card-title">Robot Registration</div>
     <div class="form">
       <form class="register-form" method="post" action="{% url 'leagues:register' league.id %}" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.code.errors }}
-        {{ form.code }}
+        {{ form.non_field_errors }}
+          {{ form.code }}
         <button>Register</button>
       </form>
     </div>
