--- a/league/templates/leagues.html
+++ b/league/templates/leagues.html
@@ -2,6 +2,12 @@
 
 {% block content %}
   <section id="leagues">
+    {% if leagues.count == 0 %}
+      <div class="flex-center flex-column">
+        <div class="error-title">No Leagues are available!</div>
+        <div class="error-description">Come back later</div>
+      </div>
+    {% endif %}
     {% for league in leagues %}
       <div class="card flex-center flex-column">
         <div class="card-title"><a href="{% url 'leagues:detail' league.id %}">{{ league.title }}</a></div>
