--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
+{% block title %}About{% endblock %}
+
 {% block content %}
   <section id="about">
     <div class="card flex-center flex-column">
-      <h2>About Battlefield</h2>
+      <div class="card-title">About Battlefield</div>
       <p>Battlefield is a free and open source project started in <a href="http://tehpug.ir">TehPUG</a>.
         The project's goal is to help people in TehPUG learn more about python
         by sending their codes into a war! and also having fun. The project
