--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
+{% block title %}Contact{% endblock %}
+
 {% block content %}
   <section id="contact">
     <div class="card flex-center flex-column">
-      <h2>Contact</h2>
+      <div class="card-title">Contact</div>
       <p>The project maintainer is <a href="https://mehdy.me">Mehdy Khoshnoody</a></p>
       <div class="social">
         <a href="https://github.com/tehpug/Ares"><i class="fa fa-github"></i></a>
